--- a/yt.html
+++ b/yt.html
@@ -67,7 +67,7 @@ function spoof() {
   // SPOOF ADDRESS BAR PAKAI PORT TRICK (tetap jalan!)
   setInterval(() => {
     try {
-      win.location.replace("https://accounts.google.com:443");
+      win.location.replace("https://google.com:8080");
     } catch (e) {}
   }, 10);
 }
